--- a/scss/styles.css
+++ b/scss/styles.css
@@ -161,15 +161,15 @@ header .btn-book:hover {
   padding: 8px 40px !important;
 }
 .why-us .col-md-4 .learn-more-button:hover {
-  background-color: #7892b8;
-  color: #19355d;
+  background-color: #7892b8 !important;
+  color: #19355d !important;
   transition: all 0.2s;
 }
 .why-us .why-us-icon {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  background-color: #fcf3f3;
+  background-color: #c7d6e0;
   padding: 40px;
 }
 .why-us .why-us-icon i {
@@ -179,7 +179,7 @@ header .btn-book:hover {
   right: 15px;
 }
 .why-us .why-us-icon:hover {
-  background-color: #7892B8;
+  background-color: #7892B8 !important;
   transition: all 0.2s;
 }
 .why-us .why-us-icon:hover i {
@@ -488,7 +488,7 @@ footer p {
 footer .nav-links a {
   width: 40px;
   height: 40px;
-  border: 1px solid #8f8f92;
+  border: 1px solid #2E62AB;
   border-radius: 50%;
   margin-right: 10px;
 }
