--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -157,8 +157,8 @@ header {
       padding: 8px 40px !important;
     }
     .learn-more-button:hover {
-      background-color: #7892b8;
-      color: #19355d;
+      background-color: #7892b8 !important;
+      color: #19355d !important;
       transition: all 0.2s;
     }
   }
@@ -166,7 +166,7 @@ header {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    background-color: #fcf3f3;
+    background-color: #c7d6e0;
     padding: 40px;
     i {
       font-size: 32px;
@@ -176,7 +176,7 @@ header {
     }
   }
   .why-us-icon:hover {
-    background-color: #7892B8;
+    background-color: #7892B8 !important;
     i {
       color: #19355d !important;
     }
@@ -547,7 +547,7 @@ footer {
     a {
       width: 40px;
       height: 40px;
-      border: 1px solid #8f8f92;
+      border: 1px solid #2E62AB;
       border-radius: 50%;
       margin-right: 10px;
       i {
